# parser-generator-frontend

./: .gitignore  CMakeLists.txt  CMakeSettings.json  Doxyfile  cpp.hint
Common/: CmakeLists.txt  MultimapNodeManager.h  NodeManager.h  UnorderedStructManager.h  common.cpp  common.h  multimap_node_manager.h  node_manager.h
Generator/: CmakeLists.txt  DFA_generator.cpp  DFA_generator.h  Generator.cpp  (+4 more)
doc/: 产生式.txt  (+3 more)
src/: CMakeLists.txt  conanbuildinfo.cmake  conanbuildinfo.txt  conanfile.txt  conaninfo.txt  graph_info.json
src/Brainfuck/: CMakeLists.txt  reduct_functions.cpp  reduct_functions.h
src/CParserFrontend/: CMakeLists.txt  acion_scope_system.cpp  action_scope_system.h  c_parser_frontend.cpp  c_parser_frontend.h  flow_control.cpp  flow_control.h  operator_node.cpp  operator_node.h  parse_functions.cpp  parse_functions.h  reduct_functions.cpp  reduct_functions.h  type_system.cpp  type_system.h
src/Common/: CmakeLists.txt  MultimapNodeManager.h  NodeManager.h  UnorderedStructManager.h  common.cpp  common.h  hash_functions.cpp  hash_functions.h  id_wrapper.h  id_wrapper_serializer.h  multimap_node_manager.h  multimap_object_manager.h  node_manager.h  object_manager.h  unordered_struct_manager.h
src/Config/: CMakeLists.txt
src/Config/Production Config/: Production.conf
src/Config/ProductionConfig/: Brainfuck-production_config-inc.h  C-parser-frontend-production_config-inc.h  Production.conf  production_config-inc.h  user_defined_functions.h
src/Config/UserLibrariesConstructConfig/: CMakeLists.txt
src/Generator/: CmakeLists.txt  Generator.cpp  export_types.cpp  export_types.h
src/Generator/DfaGenerator/: CmakeLists.txt  DfaGenerator.cpp  DfaGenerator.h  dfa_generator.cpp  dfa_generator.h
src/Generator/DfaGenerator/NfaGenerator/: CmakeLists.txt  NfaGenerator.cpp  NfaGenerator.h  nfa_generator.cpp  nfa_generator.h
src/Generator/LexicalGenerator/: LexicalGenerator.cpp  LexicalGenerator.h  config_construct.cpp  lexical_generator.cpp  lexical_generator.h  process_functions_classes.h
src/Generator/LexicalGenerator/LexicalConfig/: config_construct.cpp
src/Generator/SyntaxGenerator/: CmakeLists.txt  config_construct.cpp  process_function_interface.h  process_function_interface_register.h  process_functions_classes.h  process_functions_classes_register.h  production_item_set.cpp  production_item_set.h  production_node.cpp  production_node.h  reduct_type_register.h  syntax_analysis_table.cpp  syntax_analysis_table.h  syntax_generate.h  syntax_generator.cpp  syntax_generator.h  syntax_generator_classes_register.h  syntax_generator_type_traits.h  user_defined_function_and_data_register.h
src/Logger/: logger.h
src/Parser/: CmakeLists.txt  Parser.cpp  line_and_column.cpp  line_and_column.h
src/Parser/DfaMachine/: CmakeLists.txt  DfaMachine.cpp  DfaMachine.h  dfa_machine.cpp  dfa_machine.h
src/Parser/DfaParser/: CmakeLists.txt  dfa_parser.cpp  dfa_parser.h
src/Parser/LexicalMachine/: CmakeLists.txt  LexicalMachine.cpp  LexicalMachine.h  lexical_machine.cpp  lexical_machine.h
src/Parser/SyntaxMachine/: CmakeLists.txt  syntax_machine.cpp  syntax_machine.h
src/Parser/SyntaxParser/: CmakeLists.txt  syntax_parser.cpp  syntax_parser.h
(+4479 files in other folders)
